refactor: remove tab navigation and related components
- Deleted the tab layout and individual tab screens (index.tsx, explore.tsx).
- Removed the NotFoundScreen component.
- Simplified the root layout to only include the Stack navigator.
- Added a new index.tsx file with a basic welcome message.
- Removed unused components such as Collapsible, ExternalLink, HapticTab, HelloWave, ParallaxScrollView, ThemedText, ThemedView, and IconSymbol.
- Cleaned up color scheme hooks and related constants.
- Introduced eas.json for build configuration.
- Updated package.json and package-lock.json to include expo-dev-client.

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.phastboy.buddy"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "fa4f6335-5686-4da5-a041-1d3a68dbba2e"
+      }
+    },
+    "owner": "phastboy"
   }
 }
